added buy transaction

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:wwKnBsAuGaAWUctKlbWVT5XlT6Gcfl+0ec0z3pWs68Y=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=h
 
 LOG_CHANNEL=stack
-
 DB_CONNECTION=mysql
+
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=survey
 DB_USERNAME=root
 DB_PASSWORD=
+DB_COLLATION=utf8_bin
+
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
