--- a/.env
+++ b/.env
@@ -14,12 +14,12 @@ DB_CONNECTION=mysql
 # DB_PASSWORD=
 # DB_COLLATION=utf8_bi
 
-DB_HOST=jasmineapps.com
-DB_PORT=3306
-DB_DATABASE=jasminea_inventory
-DB_USERNAME=jasminea_inventory
-DB_PASSWORD=kIh=[30W3o!*
-DB_COLLATION=utf8_bi
+# DB_HOST=jasmineapps.com
+# DB_PORT=3306
+# DB_DATABASE=jasminea_inventory
+# DB_USERNAME=jasminea_inventory
+# DB_PASSWORD=kIh=[30W3o!*
+# DB_COLLATION=utf8_bi
 
 
 BROADCAST_DRIVER=log
